--- a/settings.json
+++ b/settings.json
@@ -3,4 +3,11 @@
     "solargraph.formatting": true,
     "editor.formatOnSave": true,
     "solargraph.diagnostics": true,
+    "terminal.integrated.profiles.linux": {
+        "bash": {
+          "path": "bash",
+          "icon": "terminal-bash",
+          "args": ["--login"]
+        }
+    }
 }
